--- a/index.html
+++ b/index.html
@@ -4,31 +4,36 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Joan Sánchez</title>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 </head>
 <body>
 <header>
-  <div id="menu">
-    <a href="/index.html">Home</a>
-    <nav>
+  <div >
+    <nav class="menu">
+      <a href="/index.html"><img src="/images/logo-ironhack.png" alt=""></a>
       <ul>
-        <li><a href="#quien-soy">About me</a></li>
+        <li></li>
+        <li><a href="#about-me">About me</a></li>
         <li><a href="#hobbies">Hobbies</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#questions">Qüestions</a></li>
       </ul>
-    </nav>
+    </nav>  
   </div>
 </header>
 <main>
-  <section id="about-me">
+  <div class="container">
+    <section id="about-me">
     <h1>Joan Sánchez</h1>
-    <p>Soy un apasionado de la informática desde pequeño. Siempre he sido un chico muy curioso con este tema aprendiendo
-      la gran parte de forma autodidacta.</p>
-  </section>
+    <p>Soy un apasionado de la informática desde pequeño. Siempre he sido muy curioso con este tema aprendiendo
+      la gran parte de forma autodidacta. </p>
+     </section>
   <section id="hobbies">
     <article>
-    <h2>Aficiones</h2>
+    <h2>Hobbies</h2>
       <ul>
         <li>Coches</li>
         <li>Tecnología</li>
@@ -37,11 +42,11 @@
     </article>
   </section>
   <section id="projects">
-    <h2>Proyectos</h2>
+    <h2>Projects</h2>
     <p></p>
   </section>
   <section id="questions">
-    <h2>Sugerencias</h2>
+    <h2>Qüestions</h2>
     <p>Si tenéis cualquier duda sobre mi, no dudéis en enviarme un mail.</p>
     <form method="GET" action="submit">
       <label>Nombre: </label><input type="text" name="firstname" placeholder="Tu nombre">
@@ -50,6 +55,8 @@
       <button type="submit">Enviar</button>
     </form>
   </section>
+  </div>
+  
 </main>
 <footer>
   <p>Copyright - Joan Sánchez</p>
