--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <header>
   <div >
-    <nav class="menu">
+    <nav class="menu bg-dark">
       <a href="/index.html"><img src="/images/logo-ironhack.png" alt=""></a>
       <ul>
         <li></li>
@@ -25,13 +25,14 @@
   </div>
 </header>
 <main>
-  <div class="container">
-    <section id="about-me">
-    <h1>Joan Sánchez</h1>
-    <p>Soy un apasionado de la informática desde pequeño. Siempre he sido muy curioso con este tema aprendiendo
-      la gran parte de forma autodidacta. </p>
+    <section id="about-me" class="bg-shadow center">
+      <div >
+        <h1>Joan Sánchez</h1>
+        <p>Soy un apasionado de la informática desde pequeño. Siempre he sido muy curioso con este tema aprendiendo
+          la gran parte de forma autodidacta. </p>
+      </div>
      </section>
-  <section id="hobbies">
+  <section id="hobbies" class="center">
     <article>
     <h2>Hobbies</h2>
       <ul>
@@ -41,11 +42,11 @@
       </ul>
     </article>
   </section>
-  <section id="projects">
+  <section id="projects" class="bg-shadow center">
     <h2>Projects</h2>
     <p></p>
   </section>
-  <section id="questions">
+  <section id="questions" class="center">
     <h2>Qüestions</h2>
     <p>Si tenéis cualquier duda sobre mi, no dudéis en enviarme un mail.</p>
     <form method="GET" action="submit">
@@ -55,7 +56,6 @@
       <button type="submit">Enviar</button>
     </form>
   </section>
-  </div>
   
 </main>
 <footer>
