--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header>
   <div >
     <nav class="menu bg-dark">
-      <a href="/index.html"><img src="/images/logo-ironhack.png" alt=""></a>
+      <a href="/index.html"><img src="./images/logo-ironhack.png" alt=""></a>
       <ul>
         <li></li>
         <li><a href="#about-me">About me</a></li>
