--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header>
   <div >
     <nav class="menu bg-dark">
-      <a href="/index.html"><img src="/images/logo-ironhack.png" alt=""></a>
+      <a href="/index.html"><img src="./images/logo-ironhack.png" alt="logo ironhack"></a>
       <ul>
         <li></li>
         <li><a href="#about-me">About me</a></li>
@@ -26,9 +26,10 @@
 </header>
 <main>
     <section id="about-me" class="bg-shadow center">
-      <div >
-        <h1>Joan Sánchez</h1>
-        <p>Soy un apasionado de la informática desde pequeño. Siempre he sido muy curioso con este tema aprendiendo
+      <h1>Joan Sánchez</h1>
+      <div class="container">
+      <img class="img-container" src="./images/personal.png" alt="">
+      <p>Soy un apasionado de la informática desde pequeño. Siempre he sido muy curioso con este tema aprendiendo
           la gran parte de forma autodidacta. </p>
       </div>
      </section>
